# davinci-mcp

./: .gitignore  CHANGELOG.md  COMPLETE_TEST_COVERAGE_REPORT.md  Cargo.toml  DEVELOPMENT_STATUS.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  REAL_CONNECTION_UPDATE.md  RUST_REWRITE_PLAN.md  comprehensive_timeline_test.py  count_tools.py  direct_test.py  final_test.py  final_timeline_test.py  quick_timeline_test.py  simple_test.py  test_complete_mcp.py  test_mcp.py  timeline_enhancement_test.py
.github/workflows/: ci.yml
docs/: FEATURES.md  README.md  USAGE_GUIDE.md
docs/development/: DEVELOPMENT_STATUS.md  IMPLEMENTATION_SUMMARY.md  NATIVE_INTEGRATION_PLAN.md  PHASE_4_WEEK_3_RENDERING.md  RUST_REWRITE_PLAN.md  test_real_connection.py
docs/guides/: PROJECT_SUMMARY.md  QUICK_START.md  USAGE_GUIDE.md
docs/phases/: PHASE_3_ROADMAP.md  PHASE_3_WEEK_2_COMPLETE.md  PHASE_3_WEEK_3_COMPLETE.md  PHASE_4_WEEK_1_COMPLETE.md  PHASE_4_WEEK_1_TIMELINE_ITEMS.md  PHASE_4_WEEK_2_COMPLETE.md  PHASE_4_WEEK_2_KEYFRAMES.md  PHASE_4_WEEK_3_RENDERING.md  PURE_RUST_MIGRATION_COMPLETE.md
docs/reports/: ACHIEVEMENT_REPORT.md  FINAL_ACHIEVEMENT_REPORT.md  FULL_COVERAGE_ANALYSIS.md  IMPROVEMENTS.md  NATIVE_BREAKTHROUGH_REPORT.md  NATIVE_INTEGRATION.md  PHASE_4_COMPLETE.md  PROJECT_COMPLETE.md  README.md
src/: error.rs  lib.rs  server.rs
src/bridge/: mod.rs  resolve_bridge.py
src/config/: mod.rs
src/native/: mod.rs
src/tools/: mod.rs
tests/: README.md  comprehensive_tool_coverage_test.rs  integration_test.rs  library_test.rs  mcp_client_test.rs  native_integration_test.rs  native_python_test.rs  real_api_test.rs  real_connection_test.rs  simple_integration_test.rs  unit_test.rs
