[package]
name = "davinci-mcp-rs"
version = "0.1.0"
edition = "2021"
authors = ["DaVinci Resolve MCP Team"]
description = "High-performance MCP server for DaVinci Resolve automation"
license = "MIT"
repository = "https://github.com/modelcontextprotocol/davinci-mcp-rs"
readme = "README.md"
keywords = ["mcp", "davinci-resolve", "video-editing", "automation"]
categories = ["multimedia::video", "api-bindings"]

[[bin]]
name = "davinci-mcp-server"
path = "src/bin/server.rs"

[[bin]]
name = "test-native"
path = "src/bin/test_native.rs"



[dependencies]
# MCP Protocol
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# JSON Schema validation
schemars = { version = "0.8", features = ["derive"] }

# UUID generation for tracking operations
uuid = { version = "1.0", features = ["v4"] }

# Time handling for timestamps
chrono = { version = "0.4", features = ["serde"] }

# File system operations
walkdir = "2.0"

# FFI and native integration
libc = "0.2"
libloading = "0.8"
bindgen = "0.69"

# System integration
nix = "0.27"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
